Start fix tests after changes